--- a/css/style.css
+++ b/css/style.css
@@ -5,25 +5,7 @@ font-family: 'Roboto', sans-serif; */
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     position: relative;
-    justify-content: center;
-}
-
-.container {
-    padding-top: 215px;
-}
-
-.header {
-    background-image: url(../img/Vector\ Smart\ Object.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    margin: auto;
-}
-
-.eclipse {
-    background-color: rgba(26, 25, 21, 0.35);
-    /* min-height: 540px; */
-    color: #fff;
+    background-color: darksalmon;
 }
 
 .logo {
@@ -32,6 +14,9 @@ font-family: 'Roboto', sans-serif; */
     font-size: 20px;
     line-height: 24px;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .login,
@@ -61,239 +46,5 @@ font-family: 'Roboto', sans-serif; */
     list-style: none;
     padding: 0px;
     margin: 0px;
+    justify-content: center;
 }
-
-.logo-nav {
-    display: flex;
-    position: absolute;
-    top: 87px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.title {
-    text-transform: uppercase;
-    text-align: center;
-    margin: 0px;
-}
-
-.title-span {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    text-align: center;
-    display: block;
-}
-
-.find {
-    border-radius: 20px;
-    background-color: rgb(255, 78, 80);
-    margin: 0 auto;
-    display: block;
-    cursor: pointer;
-    border: none;
-    color: #fff;
-    font-size: 14px;
-    height: 40px;
-}
-
-.partner-title {
-    font-size: 22px;
-    margin: 0px;
-    text-align: center;
-    line-height: 26px;
-}
-
-.partner-list {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.partner-items {
-    width: 220px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.partner-img {
-    border-radius: 50%;
-}
-
-.partner-img-wrap {
-    margin-bottom: 22px;
-    position: relative;
-}
-
-.partner-img-wrap::after {
-    position: absolute;
-    content: "";
-    display: block;
-    width: 32px;
-    height: 32px;
-    right: 0px;
-    bottom: 0px;
-    border-radius: 50%;
-    border: 4px solid #fff;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.first-person::after {
-    background-image: url(../img/11.png);
-    background-color: #ff4e50;
-}
-
-.second-person::after {
-    background-image: url(../img/31.png);
-    background-color: #ffa507;
-}
-
-.third-person::after {
-    background-image: url(../img/21.png);
-    background-color: #1cd7ad;
-}
-
-.fourth-person::after {
-    background-image: url(../img/41.png);
-    background-color: #4e73db;
-}
-
-.partner-name {
-    margin: 0px;
-    font-size: 14px;
-    margin-bottom: 19px;
-}
-
-.partner-abuot {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-    text-align: center;
-    margin: 0px;
-}
-
-.button-partners {
-    border-radius: 20px;
-    background-color: rgb(255, 255, 255);
-    margin: 0 auto;
-    display: block;
-    cursor: pointer;
-    border: 2px solid #ff4e50;
-    color: #ff4e50;
-    font-size: 14px;
-    height: 40px;
-}
-
-
-/* @media (max-width: 767px) {
-    .logo-nav {
-        flex-wrap: wrap;
-        flex-direction: column-reverse;
-        align-items: center;
-        padding-top: 10px;
-        margin-bottom: 19px;
-    }
-    .login-list li {
-        margin-bottom: 120px;
-    }
-    .title {
-        margin-bottom: 19px;
-        font-size: 30px;
-        line-height: 36px;
-    }
-    .title-span {
-        margin-bottom: 18px;
-        font-size: 18px;
-        line-height: 22px;
-    }
-    .container,
-    .container-partner {
-        width: 294px;
-        margin: 0 auto;
-    }
-    .eclipse {
-        margin-bottom: 72px;
-        min-height: 540px;
-    }
-    .partner-title {
-        margin-bottom: 18px;
-    }
-    .partner-list {
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 30px;
-    }
-    .partner-items:not(:last-of-type) {
-        margin-bottom: 29px;
-    }
-    .button-partners {
-        margin-bottom: 57px;
-        width: 280px;
-    }
-    .find {
-        width: 280px;
-    }
-}
-
-@media (min-width: 768px) {
-    .container,
-    .container-partner {
-        width: 510px;
-        margin: 0 auto;
-    }
-    .logo-nav {
-        width: 680px;
-        padding-top: 50px;
-        margin: 0 auto;
-        justify-content: space-between;
-        align-items: flex-end;
-        margin-bottom: 140px;
-    }
-    .title-span {
-        margin-bottom: 38px;
-        font-size: 24px;
-        line-height: 30px;
-    }
-    .eclipse {
-        margin-bottom: 72px;
-        min-height: 720px;
-    }
-    .title {
-        margin-bottom: 19px;
-        font-size: 52px;
-        line-height: 62px;
-    }
-    .find {
-        width: 230px;
-    }
-    .partner-list {
-        justify-content: space-between;
-        margin-bottom: 35px;
-    }
-    .partner-title {
-        margin-bottom: 35px;
-    }
-    .button-partners {
-        margin-bottom: 40px;
-        width: 190px;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 942px) {
-    .partner-items:not(:nth-last-child(-n+2)) {
-        margin-bottom: 60px;
-    }
-}
-
-@media (min-width: 943px) {
-    .logo-nav,
-    .container-partner {
-        width: 942px;
-    }
-    .button-partners {
-        margin-bottom: 72px;
-    }
-} */
